[package]
name = "coin-shuffle-protos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.8"
prost-types = "0.8"
tonic = "0.5"

[build-dependencies]
prost-build = "0.8"
tonic-build = "0.5"
anyhow = "1"

[features]
default = ["server", "client"]
server = []
client = []
