[package]
name = "coin-shuffle-protos"
version = "0.1.0"
edition = "2021"

[features]
default = ["server"]
server = ["tonic/transport"]
client = []

[dependencies]
prost = "0.11.5"
tonic = { version = "0.8.3", default-features = false, features = [
    "prost",
    "codegen",
] }


[build-dependencies]
tonic-build = { version = "0.8.4", default-features = false, features = [
    "prost",
] }
eyre = "0.6.8"
